test/functions/export/exportGenericArr.good
exportGenericArr.chpl:2: In function 'flip_bit':
exportGenericArr.chpl:3: error: exported functions cannot have generic arguments like `v`
